
<resources>
    <string name="app_name">Calculator</string>


    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m_plus">M+</string>


    <string name="clear">C</string>
    <string name="clear_entry">CE</string>
    <string name="backspace">⌫</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="sqrt">√</string>
    <string name="sign">±</string>
    <string name="percent">%</string>
    <string name="reciprocal">1/x</string>


    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
</resources>
